# aipc-os

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
boot/warmboot/: README.md  startup.txt
docs/: README.md
docs/bootrom/: README.md  boot-flow.md  boot-image-format.md  diag-mode.md  gpio-naming-crosswalk.md  memory-map.md  nand-boot.md  overview.md  spi-boot.md  uart-console.md  usb-boot.md
docs/eboot/: README.md  boot-flow.md  ethernet-driver.md  gpio-driver.md  lcd-driver.md  maintenance-mode.md  memory-map.md  nand-driver.md  partition-format.md  usb-hid-input.md
docs/nboot/: README.md  boot-flow.md  overview.md
doom/: Makefile  README.md  boot.sh  linker.ld
doom/src/: doomgeneric_aipc.c  mmu_arm926.S  mmu_table.c  start.S  syscalls.c
doom/wad/: README.md
kernel/: COPYING
kernel/patches/: v1-0001-ARM-anyka-Add-base-architecture-and-device-tree.patch  v1-0002-irqchip-anyka-Add-AK880x-AK7802-interrupt-control.patch  v1-0003-clocksource-anyka-Add-AK880x-AK7802-timer-driver.patch  v1-0004-gpio-anyka-Add-AK880x-GPIO-driver.patch  v1-0005-usb-spi-Add-CH374-HCD-and-Anyka-SPI-drivers.patch  v1-0006-video-fbdev-Add-Anyka-Boot-Framebuffer-driver.patch
tools/coldboot-dump/: README.md  pyproject.toml
tools/coldboot-dump/src/aipc_coldboot_dump/: cli.py
tools/ddr-init/: README.md  pyproject.toml
tools/ddr-init/src/aipc_ddr_init/: __init__.py  cli.py
tools/ddr-init/stub/: Makefile  ddr_init_common.inc  ddr_init_v1_58_2.S  ddr_init_v1_88.S  linker.ld
tools/nand-dump/: README.md  pyproject.toml
tools/nand-dump-min/: README.md  pyproject.toml
tools/nand-dump-min/src/ak7802_nand_dump_min/: cli.py
tools/nand-dump-min/stub/: Makefile  linker.ld  start.S  stub.c
tools/nand-dump/src/ak7802_nand_dump/: cli.py
tools/nand-dump/stub/: Makefile  linker.ld  start.S  stub.c
tools/nand-extract/: README.md  pyproject.toml
tools/nand-extract/src/aipc_nand_extract/: cli.py
tools/usbboot/: 99-ak7802.rules  README.md  pyproject.toml
tools/usbboot/src/ak7802_usbboot/: cli.py  protocol.py  transport.py
website/: en.html  index.html  package.json  pnpm-lock.yaml  vite.config.js
website/src/: fonts.css
