[project]
name = "aipc-nand-extract"
version = "0.1.0"
description = "Extract boot images from an AIPC netbook WinCE NAND dump"
authors = [
    { name = "CatMe0w", email = "CatMe0w@live.cn" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "click>=8.1",
]

[project.scripts]
aipc-nand-extract = "aipc_nand_extract.cli:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
